# OTUS_3

./: CMakeLists.txt  OTUS_3.sln  README.md  homework_3.vcxproj  homework_3.vcxproj.filters  main.cpp
.github/workflows/: release_ubuntu.yml
msvc/: homework_3.vcxproj  homework_3.vcxproj.filters
src/: custom_allocator.h  custom_list.h  main.cpp  utils.h
